# starter-glfw

./: .gitmodules  CMakeLists.txt  README.md  start.sh
lib/: CMakeLists.txt
lib/exts/: miniz.c  stb_image.cpp
lib/exts/include/glad/: glad.h
lib/exts/src/: glad.c
